--- a/server/config/server.ini
+++ b/server/config/server.ini
@@ -18,3 +18,6 @@ PASSCODE = passcode
 
 NGROK = TRUE
 
+# this should be your ngrok auth_token you can obtain it by signing up at ngrok.io
+
+AUTH_TOKEN = 
